--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.5"
+    "mongoose": "^5.13.5",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "concurrently": "^6.2.1",
